--- a/ETSMobile/Launch Screen.storyboard
+++ b/ETSMobile/Launch Screen.storyboard
@@ -17,30 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright © 2015 ApplETS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="20" y="559" width="560" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_launch" translatesAutoresizingMaskIntoConstraints="NO" id="ceE-hc-t0r">
-                                <rect key="frame" x="204" y="204" width="192" height="192"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ETS-logo-blanc" translatesAutoresizingMaskIntoConstraints="NO" id="R10-91-Obd">
+                                <rect key="frame" x="188" y="234" width="225" height="131"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="192" id="CFG-DZ-qEG"/>
-                                    <constraint firstAttribute="width" constant="192" id="uLN-fk-BiW"/>
+                                    <constraint firstAttribute="width" constant="225" id="Atg-Ec-4Hv"/>
+                                    <constraint firstAttribute="height" constant="131" id="CmG-cZ-kQK"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.72941176470588232" green="0.050980392156862744" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
-                            <constraint firstItem="ceE-hc-t0r" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="W0f-LQ-8pk"/>
-                            <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
-                            <constraint firstItem="ceE-hc-t0r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ofz-9d-Fr9"/>
+                            <constraint firstItem="R10-91-Obd" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="CQ9-px-iUZ"/>
+                            <constraint firstItem="R10-91-Obd" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P6e-MR-gRQ"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -50,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo_launch" width="1000" height="1000"/>
+        <image name="ETS-logo-blanc" width="500" height="291"/>
     </resources>
 </document>
