Fix loaded view when tapping on Notes, should always show the Master VC

--- a/ETSMobile/fr.lproj/Main.storyboard
+++ b/ETSMobile/fr.lproj/Main.storyboard
@@ -2338,7 +2338,7 @@ http://www.clubapplets.ca</string>
         <segue reference="DZg-Ea-Jjq"/>
         <segue reference="aLx-hw-zzG"/>
         <segue reference="OC4-PW-vfK"/>
-        <segue reference="mMf-iX-HGm"/>
+        <segue reference="iQl-a7-9O4"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
